# email_calendar

./: availability.py  availability2.py  pyproject.toml
