[tool.poetry]
name = "calendar"
version = "0.1.0"
description = ""
authors = ["Venkat Arun"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
recurring-ical-events = "^3.3.3"
requests = "^2.32.3"
regex = "^2024.11.6"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
